--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,12 +125,13 @@ textarea {
   border: 1px solid #ffd700;
 }
 #map {
-  height: 500px;
-  width: 50%;
+  height: 80vh;
+  width: 90%;
   margin: 0 auto;
   border-radius: 10px;
-  z-index: 0;
+  z-index: 1;
 }
+
 .container {
   width: 80%;
   max-width: 600px;
@@ -201,6 +202,19 @@ textarea {
 label {
   font-weight: bold;
   margin-bottom: 5px;
+}
+.gear-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* or center if you want it centered */
+  gap: 0.5em;
+  font-weight: bold;
+}
+
+.gear-group label {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .settings-icon {
@@ -388,6 +402,20 @@ label {
   cursor: pointer;
 }
 
+.form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* or center if you want it centered */
+  gap: 0.5em;
+  font-weight: bold;
+}
+
+.form-group label {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
 .toast.show {
   visibility: visible;
   animation:
@@ -541,4 +569,14 @@ label {
 }
 .button-group-coming button {
   padding: 10px;
+}
+.checkbox-group {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.checkbox-group input[type="checkbox"] {
+  margin: 0; /* reset all margins */
 }
